<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="10000dp"
    app:barrierDirection="left"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/Registro_de_Incidente"
        android:textSize="35sp" />

    <GridLayout

        android:layout_width="370dp"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:rowCount="6">

        <TextView

            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/Hora_y_Localizacion"
            android:textSize="20sp" />

        <LinearLayout

            android:layout_width="345dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_Hora"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Logitud_y_Lagtitud"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text=""
                android:textSize="14sp" />


        </LinearLayout>



        <EditText
            android:id="@+id/edit_Referencis"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Referencias"
            android:minHeight="48dp"
            android:textSize="15sp" />

    </GridLayout>

    <GridLayout

        android:layout_width="370dp"
        android:layout_height="230dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:rowCount="6">

        <TextView
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/Evidencia_Foto_Grafica"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:id="@+id/btn_Foto"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#576EF7"

            android:text="@string/Tomar_evidencia_fotografica"
            />

    </GridLayout>

    <GridLayout

        android:layout_width="370dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:rowCount="6">

        <TextView
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/Evidencia_Audio"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAudio"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#576EF7"

            android:text="@string/Ir_a_audios"
            />


    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#576EF7"
        app:srcCompat="@drawable/ic_saved" />

</LinearLayout>


